@@ -113,10 +113,13 @@ public @interface RetryableTopic {
 
 	/**
 	 * The replication factor for the automatically created topics. Expressions must
-	 * resolve to a short or a String that can be parsed as such.
+	 * resolve to a short or a String that can be parsed as such. Default is -1 to use the
+	 * broker default if the broker is earlier than version 2.4, an explicit value is
+	 * required.
+	 *
 	 * @return the replication factor.
 	 */
-	String replicationFactor() default "1";
+	String replicationFactor() default "-1";
 
 	/**
 	 * The exception types that should be retried.
